...
                                          padding:
                                              const EdgeInsetsDirectional.fromSTEB(
                                                  0.0, 0.0, 0.0, 16.0),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: const ValueKey('SignInEmail_z2lp'),
                                              controller: _model
                                                  .signInEmailTextController,
                                              focusNode:
                                                  _model.signInEmailFocusNode,
                                              autofocus: true,
                                              autofillHints: const [
...
                                              const EdgeInsetsDirectional.fromSTEB(
                                                  0.0, 0.0, 0.0, 16.0),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: const ValueKey(
                                                  'SignInPassword_y3v4'),
                                              controller: _model
                                                  .signInPasswordTextController,
                                              focusNode: _model
                                                  .signInPasswordFocusNode,
                                              autofocus: false,
                                              autofillHints: const [
...
                                          child: Padding(
                                            padding:
                                                const EdgeInsetsDirectional.fromSTEB(
                                                    0.0, 0.0, 0.0, 16.0),
                                            child: FFButtonWidget(
                                              key:
                                                  const ValueKey('SignInButton_eoln'),
                                              onPressed: () async {
                                                logFirebaseEvent(
                                                    'SIGNIN_PAGE_PAGE_SignInButton_ON_TAP');
                                                logFirebaseEvent(
                                                    'SignInButton_auth');
                                                GoRouter.of(context)
...
