...
                                        final searchGeocodeAddressResponse =
                                            snapshot.data!;

                                        return SizedBox(
                                          width: 240.0,
                                          child: TextFormField(
                                            key: const ValueKey('Search_rm8l'),
                                            controller:
                                                _model.searchTextController,
                                            focusNode: _model.searchFocusNode,
                                            onFieldSubmitted: (_) async {
                                              logFirebaseEvent(
                                                  'LISTING_BASE_Search_ON_TEXTFIELD_SUBMIT');
...
